--- a/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
+++ b/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
@@ -50,14 +50,6 @@
       <HintPath>..\packages\FodyCecil.1.29.4\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="SharpSvn, Version=1.9003.3829.100, Culture=neutral, PublicKeyToken=d729672594885a28, processorArchitecture=x86">
-      <HintPath>..\packages\SharpSvn.1.9-x86.1.9003.3829.100\lib\net40\SharpSvn.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="SharpSvn.UI, Version=1.9003.3829.100, Culture=neutral, PublicKeyToken=33789aa53ca44aa9, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpSvn.1.9-x86.1.9003.3829.100\lib\net40\SharpSvn.UI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -106,6 +98,14 @@
     <ProjectReference Include="..\SemVer.Stamp.Fody\SemVer.Stamp.Fody.csproj">
       <Project>{b9087e54-c162-48d5-b8a6-699947cca112}</Project>
       <Name>SemVer.Stamp.Fody</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SemVer.Stamp.Svn\SemVer.Stamp.Svn.csproj">
+      <Project>{bc16772e-21f8-451f-9b16-b65bf5c289a1}</Project>
+      <Name>SemVer.Stamp.Svn</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SemVer.Stamp\SemVer.Stamp.csproj">
+      <Project>{44d81acc-4145-4220-88c3-dd5d8fe7fb81}</Project>
+      <Name>SemVer.Stamp</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
