--- a/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
+++ b/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
@@ -59,11 +59,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
   <Target Name="AfterBuild">
+    <Exec Command="ROBOCOPY &quot;$(OutDir)\&quot; &quot;$(SolutionDir)\bin\SemVer.Svn.MSBuild&quot; * /MIR" IgnoreExitCode="true" />
   </Target>
-  -->
 </Project>
